@@ -3,19 +3,18 @@ package com.example.board.service;
 import com.example.board.domain.Post;
 import com.example.board.domain.User;
 import com.example.board.dto.request.post.CreatePostRequest;
-import com.example.board.dto.request.post.DeletePostRequest;
+import com.example.board.dto.request.post.PageCondition;
 import com.example.board.dto.request.post.PostSearchCondition;
 import com.example.board.dto.request.post.UpdatePostRequest;
+import com.example.board.exception.CustomError;
 import com.example.board.exception.CustomException;
-import com.example.board.exception.ErrorCode;
 import com.example.board.repository.post.PostRepository;
 import com.example.board.repository.user.UserRepository;
 import org.junit.jupiter.api.Test;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
@@ -46,7 +45,7 @@ class PostServiceTest {
         User author = generateAuthor();
         Post post = generatePost();
         CreatePostRequest requestDto = new CreatePostRequest("마라톤 꿀팁", "매일매일 달리세요", author.getId());
-        given(userService.getAvailableUser(eq(author.getId()))).willReturn(author);
+        given(userService.getAvailableUserById(eq(author.getId()))).willReturn(author);
         given(postRepository.save(any(Post.class))).willReturn(post);
 
         // when
@@ -59,15 +58,17 @@ class PostServiceTest {
     @Test
     void 게시글_목록을_조회할_수_있다() {
         // given
-        Pageable pageable = PageRequest.of(1, 1);
-        PostSearchCondition condition = new PostSearchCondition(null, null, null);
-        given(postRepository.findAll(eq(condition), eq(pageable))).willReturn(new PageImpl<>(Collections.emptyList(), pageable, 0));
+        PostSearchCondition searchCondition = new PostSearchCondition(null, null, null);
+        PageCondition pageCondition = new PageCondition(1, 1);
+        Pageable pageable = PageRequest.of(pageCondition.getPage(), pageCondition.getSize());
+        given(postRepository.findAll(eq(searchCondition), eq(pageable))).willReturn(List.of());
+        given(postRepository.countAll(eq(searchCondition))).willReturn(0L);
 
         // when
-        postService.getPosts(condition, pageable);
+        postService.getPosts(searchCondition, pageCondition);
 
         // then
-        verify(postRepository).findAll(eq(condition), eq(pageable));
+        verify(postRepository).findAll(eq(searchCondition), eq(pageable));
     }
 
     @Test
@@ -97,7 +98,7 @@ class PostServiceTest {
         postService.updatePost(post.getId(), requestDto);
 
         // then
-        verify(mockPost).update(requestDto.title(), requestDto.content());
+        verify(mockPost).updateTitleAndContent(requestDto.title(), requestDto.content());
     }
 
     @Test
@@ -112,7 +113,7 @@ class PostServiceTest {
         // when & then
         assertThatThrownBy(() -> postService.updatePost(post.getId(), requestDto))
                 .isInstanceOf(CustomException.class)
-                .hasMessage(ErrorCode.AUTHOR_NOT_MATCH.getMessage());
+                .hasMessage(CustomError.AUTHOR_NOT_MATCH.getMessage());
     }
 
     @Test
@@ -124,7 +125,7 @@ class PostServiceTest {
         // when & then
         assertThatThrownBy(() -> postService.updatePost(1L, requestDto))
                 .isInstanceOf(CustomException.class)
-                .hasMessage(ErrorCode.POST_NOT_FOUND.getMessage());
+                .hasMessage(CustomError.POST_NOT_FOUND.getMessage());
     }
 
     @Test
@@ -150,7 +151,7 @@ class PostServiceTest {
         // when & then
         assertThatThrownBy(() -> postService.deletePost(1L, requestDto))
                 .isInstanceOf(CustomException.class)
-                .hasMessage(ErrorCode.POST_NOT_FOUND.getMessage());
+                .hasMessage(CustomError.POST_NOT_FOUND.getMessage());
     }
 
     @Test
@@ -163,7 +164,7 @@ class PostServiceTest {
         // when & then
         assertThatThrownBy(() -> postService.deletePost(post.getId(), requestDto))
                 .isInstanceOf(CustomException.class)
-                .hasMessage(ErrorCode.AUTHOR_NOT_MATCH.getMessage());
+                .hasMessage(CustomError.AUTHOR_NOT_MATCH.getMessage());
     }
 
     User generateAuthor() {
